Update .npmrc template

--- a/src/main/resources/awesome-typescript-client/npmrc.mustache
+++ b/src/main/resources/awesome-typescript-client/npmrc.mustache
@@ -2,4 +2,5 @@
 @model-taiwan:registry = "https:{{.}}"
 {{.}}:_authToken = ${GITLAB_TOKEN}
 always-auth = true
+git-tag-version = false
 {{/npmRepository}}
