--- a/src/main/resources/awesome-dart-client/pubspec.mustache
+++ b/src/main/resources/awesome-dart-client/pubspec.mustache
@@ -7,9 +7,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  freezed_annotation: ^2.0.3
+  freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
+  retrofit: ^3.3.1
 dev_dependencies:
-  build_runner: ^2.1.11
-  freezed: ^2.0.3+1
-  json_serializable: ^6.2.0
+  build_runner: ^2.3.2
+  freezed: ^2.2.0
+  json_serializable: ^6.5.3
+  retrofit_generator: ^4.2.0
