chore: API filename

--- a/src/main/resources/awesome-dart-client/api.mustache
+++ b/src/main/resources/awesome-dart-client/api.mustache
@@ -8,7 +8,7 @@ import 'package:dio/dio.dart';
 import './date_time.dart';
 import '../{{modelPackage}}/_index.dart';
 
-part 'default_api.g.dart';
+part 'rest_client.g.dart';
 
 @RestApi()
 abstract class RestClient {
