refactor: TypeScript generate with Kotlin template

--- a/src/main/resources/awesome-typescript-client/apiIndex.mustache
+++ b/src/main/resources/awesome-typescript-client/apiIndex.mustache
@@ -1,4 +1,9 @@
 {{#withSeparateModelsAndApi}}
-{{#apiInfo}}{{#apis}}{{#operations}}export * from './{{classFilename}}';
-{{/operations}}{{/apis}}{{/apiInfo}}
+    {{#apiInfo}}
+        {{#apis}}
+            {{#operations}}
+            export * from './{{classFilename}}';
+        {{/operations}}
+        {{/apis}}
+    {{/apiInfo}}
 {{/withSeparateModelsAndApi}}
